kubernetes-orchestrations/minio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-ssl-name: "minio"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: default/minio-ingress-upstream-tls
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-verify-depth: "1"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - minio-api.k8.ferlab.lan
      secretName: minio-ingress-tls
  rules:
    - host: minio-api.k8.ferlab.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-api
                port:
                  number: 9000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-ssl-name: "minio"
    nginx.ingress.kubernetes.io/proxy-ssl-secret: default/minio-ingress-upstream-tls
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "on"
    nginx.ingress.kubernetes.io/proxy-ssl-verify-depth: "1"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - minio-console.k8.ferlab.lan
      secretName: minio-ingress-tls
  rules:
    - host: minio-console.k8.ferlab.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-console
                port:
                  number: 9001
